# HotPotato

./: CMakeLists.txt  Makefile  player  player.c  potato.h  ringmaster  ringmaster.c  server  server.c  socketInterface.c  socketInterface.h  test.sh
Player.dSYM/Contents/Resources/DWARF/: Player
server.dSYM/Contents/Resources/DWARF/: server
